<resources>
    <string name="app_name">NewsReader</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>


    <!-- Content For All Image Buttons In Application  -->
    <string name="newsImage">newsImage</string>
    <string name="news_book_Mark">newsBookMark</string>
    <string name="news_share">newsShare</string>
    <string name="news_title">News title</string>
    <string name="news_brief">News Brief</string>
    <string name="news_time">News Time</string>
    <string name="news_resource">News Resource</string>
    <string name="back_button">backButton</string>
    <string name="news_group_title">News Group Title</string>

    <!-- navigation Drawer Item Name -->
    <string name="communicate">برقراری ارتباطات</string>
    <string name="share">اشتراک گذاری</string>
    <string name="for_us">درباره ما</string>
    <string name="settings">تنظیمات</string>
    <string name="newsGroup">گروهای خبری</string>
    <string name="book_mark">اخبار علامت گذاری شده</string>

    <!-- Settings Page-->
    <string name="settings_number_of_news">تعداد اخبار نمایشی در صفحه ی اصلی :</string>
    <string name="settings_customize_news_group">گروهای خبری قابل نمایش در صفحه ی اصلی را بر اساس علاقه مندی خود مرتب و یا حذف کنید : </string>
    <string name="settings_customize_news_group_add">گروهای خبری که می توانید به مجموعه ی علاقه مندی های خود اضافه کنید : </string>
    <string name="check_connection_message">ارتباط اینترنتی شما قطع می باشد</string>


</resources>
